# vehicle-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  phase0.md  phase1.md  phase2.md  phase2_5.md
src/: main.cpp
src/controls/: DriverController.h  DriverInputs.h  Keyboard.h  SDLKeyboard.h
src/core/: Units.h  rotating_body.hpp
src/core/units/: damping.hpp  inertia.hpp  meters.hpp  meters_per_second.hpp  meters_per_second2.hpp  ops.hpp  seconds.hpp  torque.hpp
src/core/units/rotational/: angular_acceleration.hpp  angular_velocity.hpp  dynamics.hpp  radians.hpp  rpm.hpp
src/drivetrain/: Gearbox.h
src/engine/: ecu.hpp  engine.cpp  engine.hpp  engine_constants.hpp  fuel_math.hpp  fuel_system.hpp  torque_curve.hpp
src/powertrain/: DummyEngine.cpp  DummyEngine.h  DummyTransmission.cpp  DummyTransmission.h  Engine.h  ManualTransmission.cpp  ManualTransmission.h  Transmission.h
src/sim/: Simulation.cpp  Simulation.h  loop.cpp  loop.hpp  time.hpp
src/vehicle/: Vehicle.cpp  Vehicle.h  VehicleState.h  forces.hpp  models.hpp  vehicle.hpp  vehicle_dynamics.hpp  vehicle_spec.hpp  vehicle_state.hpp
